syntax = "proto3";

package timestampinterval

import "google/protobuf/timestamp.proto";

message Error {
	string code = 1;
	string message = 2;
}

message MTimeStampInterval {
  enum MTimeFrameType {
    TFUnknown = 0;
	TFWeek    = 1;
	TFMonth   = 2;
	TFQuarter = 3;
	TFYear    = 4;
   	TFSpan    = 5;
  }

  MTimeFrameType Timeframetype        = 1;
  google.protobuf.Timestamp StartTime = 2;
  google.protobuf.Timestamp EndTime   = 3;
}

message TimeEventRequest {
	string Topic = 1;
	MTimeStampInterval Timestampinterval = 2;
}

message TimeEventResponse {
	bool Completed  = 1;
  	Error error = 2;
}
